--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -5,7 +5,7 @@
 
   <div class="container">
 
-    <div class="text-center">
+    <div class="text-center pb50" >
       <h4 data-sr style="" class='we-are'>We are
         <span class="color typed-two">&nbsp;</span>
       </h4>
@@ -13,11 +13,11 @@
         <br>
         Economics and governance is changing. Institutions are shifting. People are listening.
         <br>
-        The next phase is here.
+         The next phase is here.
       </p>
-      <div class="buttons mt40 mb100">
-        <a href="/our_work" class="btn btn-white animsition-link" data-sr>
-          <span>view our works</span>
+      <div class="buttons mt40 mb50">
+        <a href="/our_work" class="btn animsition-link line-hor" style="border: 2px solid white; color:white;">
+          <span>Contact us</span>
         </a>
 
       </div>
@@ -104,8 +104,8 @@
   <!-- ************************ -->
   <!--   SECTION SERVICES       -->
   <!-- ************************ -->
-<div class="craxz-line"></div>
-  <section class="pt100 pb150">
+<div class="craxy-line"></div>
+  <section class="pt100 pb50">
     <div class="container">
 
       <div class="section-title">
@@ -135,13 +135,12 @@
               <h4 class="sub_title">01. Digital Currency
                  <div class="crazy-borderv2"></div>
               </h4>
-
-              <p>We use and build open source protocols that leverage the power of blockchain and smart contracts to create cheap, fast and private transactions. These include consensus mechanisms, wallet development and ancillary functionality.
+              <p class='text black' >We use and build open source protocols that leverage the power of blockchain and smart contracts to create cheap, fast and private transactions. These include consensus mechanisms, wallet development and ancillary functionality.
               </p>
 
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
-                  <span>view works</span>
+                  <span>Contact us</span>
                 </a>
               </div>
 
@@ -158,7 +157,7 @@
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p>User adoption and application innovations is driving the need for more secure and robust infrastructures.
+              <p class='text black' >User adoption and application innovations is driving the need for more secure and robust infrastructures.
               </p>
 
               <p>We are ‘blockchain agnostic’ in that we leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin and Ethereum Networks.</p>
@@ -182,7 +181,7 @@
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p>We are researching Layer 2 and Sidechain applications to support Layer 1 scalability. These protocols will afford users and institutions the ability to leverage the power of digital assets across blockchains to provide liquidity through the bridging of disparate markets.
+              <p class='text black'>We are researching Layer 2 and Sidechain applications to support Layer 1 scalability. These protocols will afford users and institutions the ability to leverage the power of digital assets across blockchains to provide liquidity through the bridging of disparate markets.
               </p>
 
               <div class="mt40">
@@ -215,64 +214,9 @@
   <!-- ************************ -->
   <!--   COUNTERS               -->
   <!-- ************************ -->
-
-  <section
-    class="counters jarallax pt100 pb100"
-    style="background-image: url(assets/images/bg4.png);">
-    <div class="overlay"></div>
-
-    <div class="container">
-      <div class="row">
-
-        <div class="counter-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-check"></i>
-            </div>
-            <h6>1245</h6>
-            <p>working hours</p>
-          </div>
-        </div>
-        <!-- End counter-item -->
-        <div class="counter-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-
-            <div class="item-head">
-              <i class="cr-send"></i>
-            </div>
-            <h6>648</h6>
-            <p>project completed</p>
-          </div>
-        </div>
-        <!-- End counter-item -->
-
-        <div class="counter-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-cup"></i>
-            </div>
-            <h6>576</h6>
-            <p>cups of tea</p>
-          </div>
-        </div>
-        <!-- End counter-item -->
-
-        <div class="counter-item sm-mb40" data-sr>
-          <div class="col-md-3 col-sm-6">
-            <div class="item-head">
-              <i class="cr-heart"></i>
-            </div>
-            <h6>632</h6>
-            <p>happy clients</p>
-          </div>
-        </div>
-        <!-- End counter-item -->
-      </div>
-    </div>
-    <!-- End container -->
-
-  </section>
-
+<div class="container">
+  <div class="sep-line-bushi"></div>
+</div>
   <!-- ************************ -->
   <!--   OUR WORKS              -->
   <!-- ************************ -->
@@ -286,9 +230,9 @@
 
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <em >Suspendisse et tristique nisi, a rutrum lacus. Sed
+            <p class='text black' >Suspendisse et tristique nisi, a rutrum lacus. Sed
               dapibus nec massa et rutrum hendrerit tincidunt feugiat non metus quis lectus
-              feugiat bibendum.</em>
+              feugiat bibendum.</p>
           </div>
         </div>
 
@@ -327,7 +271,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Col Sass / Web developer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -363,7 +307,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black'>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -398,7 +342,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -435,7 +379,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -470,7 +414,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Ruby Rails / web designer</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -506,7 +450,7 @@
             <!-- End team-header -->
             <div class="team-footer">
               <h6>Mark React / team lead</h6>
-              <p>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -537,7 +481,7 @@
             </div>
 
             <h3>Diva span</h3>
-            <p>Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
+            <p >Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
               ipsum, euismod et lacinia em.
               <br>
               Donec lobortis magna sed urna cursus, vitae ultrices sapien pellentesque.
