--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -42,7 +42,7 @@
           <% end %>
 
           <div class="spacer-half"></div>
-          <button class="btn" id="subscribe-user" data-url="<%= subscribe_users_path %>">
+          <button class="btn line-hor" id="subscribe-user" data-url="<%= subscribe_users_path %>">
           <i class="mail icon"></i>
             <span>Subscribe</span>
           </button>
