--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -16,7 +16,7 @@
          The next phase is here.
       </p>
       <div class="buttons mt40 mb50">
-        <a href="/our_work" class="btn animsition-link line-hor" style="border: 2px solid white; color:white;">
+        <a href="/our_work" class="btn line-hor" style="border: 2px solid white; color:white;">
           <span>Contact us</span>
         </a>
 
@@ -57,7 +57,6 @@
         <div class="row pt70 pb50">
           <div class="col-md-6 agile-diagram-text pt50" style="font-size: larger;">
             <%= image_tag 'diagram_bushi.png' %>
-            <!-- <img src="assets/images/diagram_bushi.png" > -->
           </div>
           <div class="col-md-6 bushi-workflow" >
             <div class="agile-diagram-sub-tex">
@@ -130,6 +129,7 @@
           <div class="owl-item">
             <div class="col-md-5">
               <img src="assets/images/digital_currency.jpg" alt="image">
+
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">01. Digital Currency
@@ -246,7 +246,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/chris.jpg" alt="image">
+              <%= image_tag 'sam'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -270,8 +270,10 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Col Sass / Web developer</h6>
-              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Sam Abbassi 
+              </h6>
+              <p class='text black' >Economics, Neuroscience <br/>
+                Co-Founder / Systems Engineering</p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -282,7 +284,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/sam.jpg" alt="image">
+              <%= image_tag 'chris'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -306,8 +308,10 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p class='text black'>Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Christopher Arguello
+              </h6>
+              <p class='text black' >Co-Founder / Protocol Development <br/>
+               Project Management, Manufacturing </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -317,7 +321,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/kevin.jpg" alt="image">
+              <%= image_tag 'kevin'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -341,8 +345,10 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Kevin Van Der Poll
+              </h6>
+              <p class='text black' > Co-Founder / Protocol Development<br/>
+               Video Game Design, Hospitality </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -354,7 +360,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/nicolas.jpg" alt="image">
+              <%= image_tag 'luis'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -376,10 +382,11 @@
               </div>
               <!-- End social-wrap -->
             </div>
-            <!-- End team-header -->
             <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Luis Thomas
+              </h6>
+              <p class='text black' >Wallet Development <br/>
+               Computer Science, Pura Vida </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -389,7 +396,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/luis.jpg" alt="image">
+              <%= image_tag 'nicolas'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -413,8 +420,47 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Ruby Rails / web designer</h6>
-              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Nicholas Levo
+              </h6>
+              <p class='text black' >Protocol Development<br/>
+               Computer Science, Hospitality </p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+      <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <%= image_tag 'andres'  %>
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Ariel Deschapelle
+              </h6>
+              <p class='text black' >Systems Engineering <br/>
+               Bitcoin, Journalism </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -425,7 +471,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <img src="assets/images/andres.jpg" alt="image">
+              <%= image_tag 'andres'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -449,13 +495,53 @@
             </div>
             <!-- End team-header -->
             <div class="team-footer">
-              <h6>Mark React / team lead</h6>
-              <p class='text black' >Ut fringilla dolor mi, nec scelerisque nibh tincid in. Aliquam semper lacinia.</p>
+              <h6>Andres Rojas
+              </h6>
+              <p class='text black' >Full Stack Developer <br/>
+              Ping Pong Champion </p>
             </div>
             <!-- End team-footer -->
           </div>
           <!-- End team-item -->
         </div>
+        <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <%= image_tag 'andres'  %>
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!-- End social-wrap -->
+            </div>
+            <!-- End team-header -->
+            <div class="team-footer">
+              <h6>Katya Demina
+              </h6>
+              <p class='text black' >PR Management <br/>
+                </p>
+            </div>
+            <!-- End team-footer -->
+          </div>
+          <!-- End team-item -->
+        </div>
+
       </div>
     </div>
     <!-- End container -->
