--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -128,8 +128,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/digital_currency.jpg" alt="image">
-
+              <%= image_tag 'digital_currency' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">01. Digital Currency
@@ -150,7 +149,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/financial_networks.jpg" alt="image">
+              <%= image_tag 'financial_networks' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">02. Blockchain Applications
@@ -174,7 +173,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <img src="assets/images/blockchain_applications.jpg" alt="image">
+              <%= image_tag 'blockchain_applications' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">03. Financial Networks
@@ -433,7 +432,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'andres'  %>
+              <%= image_tag 'team_001.png'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -508,7 +507,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'andres'  %>
+              <%= image_tag 'team_001.png'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
