last touches added by andy

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,9 +2,9 @@
 <!--   FOOTER                 -->
 <!-- ************************ -->
 
-<footer class="<%= @site.slug != 'contact_us' && 'pt150'%>">
+<footer class="<%= @site.slug != 'contact_us' && 'pt150'%>" id="contact_us">
   <% unless @site.slug == 'contact_us' %>
-    <div class="container" id="contact_us" >
+    <div class="container"  >
 
       <div class="title">contact us</div>
 
