--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body id="top">
-    <div class="animsition">
+    <div class="">
 
       <!-- ************************ -->
       <!--  GO TO TOP               -->
