--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -48,7 +48,7 @@
   <!--   SECTION FEATURES       -->
   <!-- ************************ -->
 
-  <section class="features pt150">
+  <section class="features pt150" id="about_us">
 
     <div class="container">
       <div class="title">
@@ -104,7 +104,7 @@
   <!--   SECTION SERVICES       -->
   <!-- ************************ -->
 <div class="craxy-line"></div>
-  <section class="pt100 pb50">
+  <section class="pt100 pb50" id="what_we_do">
     <div class="container">
 
       <div class="section-title">
@@ -220,7 +220,7 @@
   <!--   OUR WORKS              -->
   <!-- ************************ -->
 
-  <section class="pt150 pb150">
+  <section class="pt150 pb150" id="our_team">
 
     <div class="container">
 
