last changes I guess lol

--- a/app/views/application/_nav_list.html.erb
+++ b/app/views/application/_nav_list.html.erb
@@ -1,16 +1,16 @@
 <% current_item = "current-menu-item" %>
 <li class="<%= @site.slug == 'home' && current_item %>">
-  <a href="/" class="animsition-link">01. Home</a>
+  <a href="/" class="">01. Home</a>
 </li>
 <li class="<%= @site.slug == 'about_us' && current_item %>">
   <a href="#about_us">02. About Us</a>
 </li>
 <li class="<%= @site.slug == 'our_work' && current_item %>">
-  <a href="#what_we_do" class="animsition-link">03. What We Do</a>
+  <a href="#what_we_do" class="">03. What We Do</a>
 </li>
 <li class="<%= @site.slug == 'contact_us' && current_item %>">
-  <a href="#our_team" class="animsition-link">04. Our Team</a>
+  <a href="#our_team" class="">04. Our Team</a>
 </li>
 <li class="<%= @site.slug == 'contact_us' && current_item %>">
-  <a href="#contact_us" class="animsition-link">05. Contact Us</a>
+  <a href="#contact_us" class="">05. Contact Us</a>
 </li>
