--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -7,7 +7,7 @@
 
     <div class="crazy-logo">
       <a href="/">
-        <img src="assets/images/bushilogo.png" alt="crazy-logo">
+        <%= image_tag 'bushilogo.png' %>
       </a>
     </div>
     <!-- End crazy-logo -->
