--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -1,4 +1,4 @@
-<div class="title-home jarallax" style="background-image: url(assets/images/land.jpg);">
+<div class="title-home jarallax" style="background-image: url(<%= asset_path 'land.jpg' %>);">
 
   <div class="overlay"></div>
   <!-- End overlay -->
