--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -138,7 +138,7 @@
               </p>
 
               <div class="mt40">
-                <a href="/our_work" class="btn animsition-link line-hor">
+                <a href="#contact_us" class="btn animsition-link line-hor">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -162,8 +162,8 @@
               <p>We are ‘blockchain agnostic’ in that we leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin and Ethereum Networks.</p>
 
               <div class="mt40">
-                <a href="/our_work" class="btn animsition-link line-hor">
-                  <span>view works</span>
+                <a href="#contact_us" class="btn animsition-link line-hor">
+                  <span>Contact us</span>
                 </a>
               </div>
 
@@ -184,8 +184,8 @@
               </p>
 
               <div class="mt40">
-                <a href="/our_work" class="btn animsition-link line-hor">
-                  <span>view works</span>
+                <a href="#contact_us" class="btn animsition-link line-hor">
+                  <span>Contact us</span>
                 </a>
               </div>
 
@@ -550,10 +550,9 @@
   <!-- ************************ -->
   <!--   TESTIMONIAL            -->
   <!-- ************************ -->
-
   <section
     class="testimonial-wrap jarallax pt150 pb150"
-    style="background-image: url(assets/images/testimonial-bg2.png);">
+    style="background-image: url(<%= asset_path 'testimonial-bg2.png' %>);">
     <div class="overlay"></div>
     <div class="container-fluid">
       <div class="row">
@@ -562,7 +561,7 @@
           <div class="owl-item" data-sr>
 
             <div class="avatar-wrap">
-              <img src="assets/images/testimonial-01.png" alt="avatar">
+              <%= image_tag 'testimonial-01.png' %>
             </div>
 
             <h3>Diva span</h3>
@@ -579,7 +578,7 @@
           <div class="owl-item" data-sr>
 
             <div class="avatar-wrap">
-              <img src="assets/images/testimonial-02.png" alt="avatar">
+              <%= image_tag 'testimonial-02.png' %>
             </div>
 
             <h3>Paulo Aramella</h3>
