--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -128,7 +128,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <%= image_tag 'digital_currency' %>
+              <%= image_tag 'digital_currency.jpg' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">01. Digital Currency
