--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -149,7 +149,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <%= image_tag 'financial_networks' %>
+              <%= image_tag 'financial_networks.jpg' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">02. Blockchain Applications
@@ -173,7 +173,7 @@
 
           <div class="owl-item">
             <div class="col-md-5">
-              <%= image_tag 'blockchain_applications' %>
+              <%= image_tag 'blockchain_applications.jpg' %>
             </div>
             <div class="col-md-6 col-md-offset-1">
               <h4 class="sub_title">03. Financial Networks
@@ -245,7 +245,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'sam'  %>
+              <%= image_tag 'sam.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -283,7 +283,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'chris'  %>
+              <%= image_tag 'chris.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -320,7 +320,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'kevin'  %>
+              <%= image_tag 'kevin.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -359,7 +359,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'luis'  %>
+              <%= image_tag 'luis.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -395,7 +395,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'nicolas'  %>
+              <%= image_tag 'nicolas.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
@@ -470,7 +470,7 @@
 
           <div class="team-item sm-mb40">
             <div class="team-header">
-              <%= image_tag 'andres'  %>
+              <%= image_tag 'andres.jpg'  %>
               <div class="social-wrap">
                 <ul class="list-none">
                   <li>
