remove animation links from a tags

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -138,7 +138,7 @@
               </p>
 
               <div class="mt40">
-                <a href="#contact_us" class="btn animsition-link line-hor">
+                <a href="#contact_us" class="btn line-hor">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -162,7 +162,7 @@
               <p>We are ‘blockchain agnostic’ in that we leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin and Ethereum Networks.</p>
 
               <div class="mt40">
-                <a href="#contact_us" class="btn animsition-link line-hor">
+                <a href="#contact_us" class="btn line-hor">
                   <span>Contact us</span>
                 </a>
               </div>
@@ -184,7 +184,7 @@
               </p>
 
               <div class="mt40">
-                <a href="#contact_us" class="btn animsition-link line-hor">
+                <a href="#contact_us" class="btn line-hor">
                   <span>Contact us</span>
                 </a>
               </div>
