--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -16,7 +16,7 @@
          The next phase is here.
       </p>
       <div class="buttons mt40 mb50">
-        <a href="/our_work" class="btn line-hor" style="border: 2px solid white; color:white;">
+        <a href="#contact_us" class="btn line-hor" style="border: 2px solid white; color:white;">
           <span>Contact us</span>
         </a>
 
