removed ariel and katya until images come in, and removed social links in footer

--- a/app/views/sites/pages/_home.html.erb
+++ b/app/views/sites/pages/_home.html.erb
@@ -112,9 +112,7 @@
 
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <em data-sr="wait .2s">Suspendisse potenti. In dignissim quis turpis nec
-              egestas. Curabitur faucibus sollicitudin magna, mattis sagittis erat tempus
-              eget.</em>
+            <em data-sr="wait .2s">We are ‘blockchain agnostic’. We leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin, Ethereum, and Hyperledger blockchain infrastructures.</em>
           </div>
         </div>
 
@@ -156,11 +154,9 @@
                  <div class="crazy-borderv2"></div>
               </h4>
 
-              <p class='text black' >User adoption and application innovations is driving the need for more secure and robust infrastructures.
+              <p class='text black' >User adoption and application innovations is driving the need for more secure and robust infrastructures. Blockchain provides robust security, transparency, and increases shareholder value all around.
               </p>
-
-              <p>We are ‘blockchain agnostic’ in that we leverage several different platforms for different use-cases. The bulk of our experience lies in the Bitcoin and Ethereum Networks.</p>
-
+              
               <div class="mt40">
                 <a href="/our_work" class="btn animsition-link line-hor">
                   <span>view works</span>
@@ -229,9 +225,7 @@
 
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <p class='text black' >Suspendisse et tristique nisi, a rutrum lacus. Sed
-              dapibus nec massa et rutrum hendrerit tincidunt feugiat non metus quis lectus
-              feugiat bibendum.</p>
+            <p class='text black' >We're a small, agile, coherent team of software developers with a unified obsession with Blockchain. Ask us what get's us out of bed in the morning, you guessed it, Blockchain.</p>
           </div>
         </div>
 
@@ -391,7 +385,7 @@
           </div>
           <!-- End team-item -->
         </div>
-                <div class="col-sm-4">
+          <div class="col-sm-4">
 
           <div class="team-item sm-mb40">
             <div class="team-header">
@@ -423,43 +417,6 @@
               </h6>
               <p class='text black' >Protocol Development<br/>
                Computer Science, Hospitality </p>
-            </div>
-            <!-- End team-footer -->
-          </div>
-          <!-- End team-item -->
-        </div>
-      <div class="col-sm-4">
-
-          <div class="team-item sm-mb40">
-            <div class="team-header">
-              <%= image_tag 'team_001.png'  %>
-              <div class="social-wrap">
-                <ul class="list-none">
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-facebook"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-dribbble"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <i class="fa fa-fw fa-twitter"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <!-- End social-wrap -->
-            </div>
-            <!-- End team-header -->
-            <div class="team-footer">
-              <h6>Ariel Deschapelle
-              </h6>
-              <p class='text black' >Systems Engineering <br/>
-               Bitcoin, Journalism </p>
             </div>
             <!-- End team-footer -->
           </div>
@@ -503,6 +460,142 @@
           </div>
           <!-- End team-item -->
         </div>
+
+
+      </div>
+    </div>
+    <!-- End container -->
+
+  </section>
+
+  <!-- ************************ -->
+  <!--   TESTIMONIAL            -->
+
+
+<!-- 
+  <section
+    class="testimonial-wrap jarallax pt150 pb150"
+    style="background-image: url(assets/images/testimonial-bg2.png);">
+    <div class="overlay"></div>
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="owl-testimonial-slider">
+          <div class="owl-item" data-sr>
+
+            <div class="avatar-wrap">
+              <img src="assets/images/testimonial-01.png" alt="avatar">
+            </div>
+
+            <h3>Diva span</h3>
+            <p >Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
+              ipsum, euismod et lacinia em.
+              <br>
+              Donec lobortis magna sed urna cursus, vitae ultrices sapien pellentesque.
+              <br>
+              In posuere, risus sed aliquet varius, tortor neque.</p>
+
+          </div>
+
+          <div class="owl-item" data-sr>
+
+            <div class="avatar-wrap">
+              <img src="assets/images/testimonial-02.png" alt="avatar">
+            </div>
+
+            <h3>Paulo Aramella</h3>
+            <p>Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
+              ipsum, euismod et lacinia em.
+              <br>
+              Donec lobortis magna sed urna cursus, vitae ultrices sapien pellentesque.
+              <br>
+              In posuere, risus sed aliquet varius, tortor neque.</p>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="testimonial-nav">
+      <i class="lnr lnr-arrow-left pull-left"></i>
+      <i class="lnr lnr-arrow-right pull-right"></i>
+    </div>
+
+
+  </section>
+ -->
+
+
+
+</main>
+
+<!-- ************************ -->
+<!--   SEPARATOR              -->
+<!-- ************************ -->
+
+<div class="container">
+  <div class="sep-line-bushi"></div>
+</div>
+<!--
+<div class="container">
+  <div class="sep-line"></div>
+</div>
+-->
+<!-- End container -->
+
+
+
+
+
+
+
+
+
+
+
+<!--
+      <div class="col-sm-4">
+
+          <div class="team-item sm-mb40">
+            <div class="team-header">
+              <%= image_tag 'team_001.png'  %>
+              <div class="social-wrap">
+                <ul class="list-none">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-fw fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+
+            <div class="team-footer">
+              <h6>Ariel Deschapelle
+              </h6>
+              <p class='text black' >Systems Engineering <br/>
+               Bitcoin, Journalism </p>
+            </div>
+
+          </div>
+        </div>
+-->
+
+<!--
         <div class="col-sm-4">
 
           <div class="team-item sm-mb40">
@@ -527,94 +620,14 @@
                   </li>
                 </ul>
               </div>
-              <!-- End social-wrap -->
             </div>
-            <!-- End team-header -->
             <div class="team-footer">
               <h6>Katya Demina
               </h6>
               <p class='text black' >PR Management <br/>
                 </p>
             </div>
-            <!-- End team-footer -->
           </div>
-          <!-- End team-item -->
         </div>
 
-      </div>
-    </div>
-    <!-- End container -->
-
-  </section>
-
-  <!-- ************************ -->
-  <!--   TESTIMONIAL            -->
-  <!-- ************************ -->
-
-  <section
-    class="testimonial-wrap jarallax pt150 pb150"
-    style="background-image: url(assets/images/testimonial-bg2.png);">
-    <div class="overlay"></div>
-    <div class="container-fluid">
-      <div class="row">
-
-        <div class="owl-testimonial-slider">
-          <div class="owl-item" data-sr>
-
-            <div class="avatar-wrap">
-              <img src="assets/images/testimonial-01.png" alt="avatar">
-            </div>
-
-            <h3>Diva span</h3>
-            <p >Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
-              ipsum, euismod et lacinia em.
-              <br>
-              Donec lobortis magna sed urna cursus, vitae ultrices sapien pellentesque.
-              <br>
-              In posuere, risus sed aliquet varius, tortor neque.</p>
-
-          </div>
-          <!-- End owl-item -->
-
-          <div class="owl-item" data-sr>
-
-            <div class="avatar-wrap">
-              <img src="assets/images/testimonial-02.png" alt="avatar">
-            </div>
-
-            <h3>Paulo Aramella</h3>
-            <p>Mauris interdum blandit enim et elementum. Suspendisse potenti. Mauris nulla
-              ipsum, euismod et lacinia em.
-              <br>
-              Donec lobortis magna sed urna cursus, vitae ultrices sapien pellentesque.
-              <br>
-              In posuere, risus sed aliquet varius, tortor neque.</p>
-
-          </div>
-          <!-- End owl-item -->
-
-        </div>
-        <!-- End owl-testimonial-slider -->
-
-      </div>
-    </div>
-    <!-- End container-fluid -->
-
-    <div class="testimonial-nav">
-      <i class="lnr lnr-arrow-left pull-left"></i>
-      <i class="lnr lnr-arrow-right pull-right"></i>
-    </div>
-    <!-- End testimonial-nav -->
-
-  </section>
-
-</main>
-
-<!-- ************************ -->
-<!--   SEPARATOR              -->
-<!-- ************************ -->
-
-<div class="container">
-  <div class="sep-line"></div>
-</div>
-<!-- End container -->
+        -->
